Added some configuration options to control which Python analyzers are run

--- a/ProcessMusic.cfg
+++ b/ProcessMusic.cfg
@@ -1,2 +1,3 @@
-runRepeatedly = false
-analyzers = [ "GMM.py" ]
+runRepeatedly = true
+#analyzers = [ "GMM.py", "Plotter.py" ]
+analyzers = [ "Plotter.py" ]
